--- a/helm/linkerd2-app/templates/heartbeat.yaml
+++ b/helm/linkerd2-app/templates/heartbeat.yaml
@@ -60,4 +60,5 @@ spec:
             {{- end }}
             securityContext:
               runAsUser: {{.Values.controllerUID}}
+              readOnlyRootFilesystem: true
 {{- end }}
