--- a/helm/linkerd2-app/templates/sp-validator.yaml
+++ b/helm/linkerd2-app/templates/sp-validator.yaml
@@ -118,6 +118,7 @@ spec:
         {{- end }}
         securityContext:
           runAsUser: {{.Values.controllerUID}}
+          readOnlyRootFilesystem: true
         volumeMounts:
         - mountPath: /var/run/linkerd/tls
           name: tls
