--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -1,6 +1,17 @@
-skip-steps: test_all
+#skip-steps: test_all
 chart-dir: helm/linkerd2-cni-app
 replace-chart-version-with-git: true
 replace-app-version-with-git: false
 generate-metadata: true
 catalog-base-url: https://giantswarm.github.io/giantswarm-catalog/
+# smoke-tests-cluster-type: kind
+
+skip-steps: test_functional
+app-tests-skip-app-deploy: true
+
+smoke-tests-cluster-type: external
+external-cluster-kubeconfig-path: kubebox-kubeconfig
+external-cluster-type: kind
+external-cluster-version: v1.21.1
+
+# smoke-tests-cluster-config-file: helm/linkerd2-cni-app/tests/kind_config.yaml
