--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -8,10 +8,10 @@ catalog-base-url: https://giantswarm.github.io/giantswarm-catalog/
 skip-steps: test_functional
 app-tests-skip-app-deploy: true
 
-smoke-tests-cluster-type: external
-external-cluster-kubeconfig-path: kubebox-kubeconfig
-external-cluster-type: kind
-external-cluster-version: v1.21.1
+#smoke-tests-cluster-type: external
+#external-cluster-kubeconfig-path: kubebox-kubeconfig
+#external-cluster-type: kind
+#external-cluster-version: v1.21.1
 
-#smoke-tests-cluster-config-file: helm/linkerd2-app/tests/kind_config.yaml
-#smoke-tests-cluster-type: kind
+smoke-tests-cluster-config-file: helm/linkerd2-app/tests/kind_config.yaml
+smoke-tests-cluster-type: kind
