use PodDisruptionBudget policy/v1beta1

--- a/helm/linkerd2-app/tests/abs/test-app-manifests.yaml
+++ b/helm/linkerd2-app/tests/abs/test-app-manifests.yaml
@@ -155,7 +155,7 @@ spec:
         runAsUser: 1000
       serviceAccountName: helloworld-sa
 ---
-apiVersion: policy/v1
+apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   labels:
