--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -32,7 +32,7 @@ controlPlaneTracingNamespace: linkerd-jaeger
 # -- control plane version. See Proxy section for proxy version
 linkerdVersion: stable-2.10.2
 # -- Control plane namespace
-namespace: linkerd2-app
+namespace: linkerd
 # -- enables the use of EndpointSlice informers for the destination service;
 # enableEndpointSlices should be set to true only if EndpointSlice K8s feature
 # gate is on; the feature is still experimental.
