--- a/helm/linkerd2-app/templates/controller.yaml
+++ b/helm/linkerd2-app/templates/controller.yaml
@@ -54,6 +54,7 @@ metadata:
     app.kubernetes.io/version: {{default .Values.linkerdVersion .Values.controllerImageVersion}}
     linkerd.io/control-plane-component: controller
     linkerd.io/control-plane-ns: {{.Values.namespace}}
+    giantswarm.io/monitoring_basic_sli: "true"
   name: linkerd-controller
   namespace: {{.Values.namespace}}
 spec:
