use stable release of pytest-helm-charts; minor improvements

--- a/helm/linkerd2-app/tests/abs/test-values.yaml
+++ b/helm/linkerd2-app/tests/abs/test-values.yaml
@@ -1,6 +1,6 @@
 identity:
   issuer:
-    crtExpiry: 2022-07-13T09:29:06Z
+    crtExpiry: "2022-07-13T09:29:06Z"
     tls:
       crtPEM: |
         -----BEGIN CERTIFICATE-----
