--- a/helm/linkerd2-app/tests/abs/test-values.yaml
+++ b/helm/linkerd2-app/tests/abs/test-values.yaml
@@ -1,35 +1,35 @@
 identity:
   issuer:
-    crtExpiry: "2022-07-13T09:29:06Z"
+    crtExpiry: "2121-07-22T19:15:01Z"
     tls:
       crtPEM: |
         -----BEGIN CERTIFICATE-----
-        MIIBszCCAVmgAwIBAgIRAKOanzFDaXyA9hg0++/hh5cwCgYIKoZIzj0EAwIwJTEj
-        MCEGA1UEAxMacm9vdC5saW5rZXJkLmNsdXN0ZXIubG9jYWwwHhcNMjEwNzEzMDcy
-        OTA2WhcNMjIwNzEzMDcyOTA2WjApMScwJQYDVQQDEx5pZGVudGl0eS5saW5rZXJk
-        LmNsdXN0ZXIubG9jYWwwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAASh0p8b9idc
-        lmySsZsI3HYQeg5AAjPOVqwNNixtgA/SJG/OMcRqL+mnBd7U325B3Pyh96rO5ycn
-        /IO2SJRNgn2do2YwZDAOBgNVHQ8BAf8EBAMCAQYwEgYDVR0TAQH/BAgwBgEB/wIB
-        ADAdBgNVHQ4EFgQUgRECYCsZw2nqFPEZXgB2tonFWygwHwYDVR0jBBgwFoAUU8Au
-        RqF4a0A/SSqe/NN4WCgENc8wCgYIKoZIzj0EAwIDSAAwRQIhAPRGmgzZnogT/VHY
-        XeI4VS+alOBh38CwnU61ZMiGQ1nVAiBCAVRXC0d/OU1CV9WrICqI2g1dQH9l3yFp
-        XmpxwOP5Gw==
+        MIIBtjCCAVugAwIBAgIRAKihbxILFs3NPt1ML68yD0QwCgYIKoZIzj0EAwIwJTEj
+        MCEGA1UEAxMacm9vdC5saW5rZXJkLmNsdXN0ZXIubG9jYWwwIBcNMjEwNzIyMTMx
+        NTAxWhgPMjEyMTA3MjIxOTE1MDFaMCkxJzAlBgNVBAMTHmlkZW50aXR5Lmxpbmtl
+        cmQuY2x1c3Rlci5sb2NhbDBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABCqkyBMN
+        EqSMJKr5uY20w7OpmQLoRGk2XPTfZnRIglXVzjFSwEkjGEgaxo2s7cWNcU0JBJcM
+        tFVM6sJTz1xwYLejZjBkMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAGAQH/
+        AgEAMB0GA1UdDgQWBBRHOIrJqz+w/XK9FGTyu5Wu/IUkBzAfBgNVHSMEGDAWgBTR
+        P4FlGwC//efqZbQTaon7TuhySDAKBggqhkjOPQQDAgNJADBGAiEAjAKhV9fVsp4K
+        bqw0XjbyBFbhqaM/utq9O0655MiCk8sCIQC0bep2j/sbBLDBzcb01BbQMfqKHeSx
+        McctkQ7UY7noFQ==
         -----END CERTIFICATE-----
       keyPEM: |
         -----BEGIN EC PRIVATE KEY-----
-        MHcCAQEEIMTheafKSuhjsRA3l2b4hDZa/Rg+pknhxkqgcF7B90PBoAoGCCqGSM49
-        AwEHoUQDQgAEodKfG/YnXJZskrGbCNx2EHoOQAIzzlasDTYsbYAP0iRvzjHEai/p
-        pwXe1N9uQdz8ofeqzucnJ/yDtkiUTYJ9nQ==
+        MHcCAQEEIIWoQAD21+J3S+lQNVmPQ+dJvJzfX5lQoRoWx0dzWxEAoAoGCCqGSM49
+        AwEHoUQDQgAEKqTIEw0SpIwkqvm5jbTDs6mZAuhEaTZc9N9mdEiCVdXOMVLASSMY
+        SBrGjaztxY1xTQkElwy0VUzqwlPPXHBgtw==
         -----END EC PRIVATE KEY-----
 identityTrustAnchorsPEM: |
   -----BEGIN CERTIFICATE-----
-  MIIBjzCCATSgAwIBAgIRAJqv6FjbjYWYQd0rhGgQxDMwCgYIKoZIzj0EAwIwJTEj
-  MCEGA1UEAxMacm9vdC5saW5rZXJkLmNsdXN0ZXIubG9jYWwwHhcNMjEwNzEzMDcy
-  OTAxWhcNMzEwNzExMDcyOTAxWjAlMSMwIQYDVQQDExpyb290LmxpbmtlcmQuY2x1
-  c3Rlci5sb2NhbDBZMBMGByqGSM49AgEGCCqGSM49AwEHA0IABPkHPTBkA2RBXixZ
-  tgVSdV8OVeGJTXIX/ms5h7jgccnsFxXkFPzPdBW4UGVb3bYP7iI6qgAHJ9kdz7x9
-  5Vp3Je6jRTBDMA4GA1UdDwEB/wQEAwIBBjASBgNVHRMBAf8ECDAGAQH/AgEBMB0G
-  A1UdDgQWBBRTwC5GoXhrQD9JKp7803hYKAQ1zzAKBggqhkjOPQQDAgNJADBGAiEA
-  pLzcsvI+pm9u4aDObiz2S+77aoY1nMwnzqKpiK2SsF4CIQCNvVLISwvRptChZsfN
-  I4jt//+RIs9wthZ9ZRYHdRxLhg==
+  MIIBjjCCATWgAwIBAgIQSW0BwPxz+ittQJlk+GXLKTAKBggqhkjOPQQDAjAlMSMw
+  IQYDVQQDExpyb290LmxpbmtlcmQuY2x1c3Rlci5sb2NhbDAgFw0yMTA3MjIxMzEz
+  MzlaGA8yMTIxMDcyMjE5MTMzOVowJTEjMCEGA1UEAxMacm9vdC5saW5rZXJkLmNs
+  dXN0ZXIubG9jYWwwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAARq202TSDnonkAh
+  NDwT+2RBvuJwx7nN3YjPo3H1Qva0IUFIa+EzcIqGlxNOzS4FJpLxN795J6GKp4BI
+  4QUfBbbIo0UwQzAOBgNVHQ8BAf8EBAMCAQYwEgYDVR0TAQH/BAgwBgEB/wIBATAd
+  BgNVHQ4EFgQU0T+BZRsAv/3n6mW0E2qJ+07ockgwCgYIKoZIzj0EAwIDRwAwRAIg
+  DQGa1wW0lD/EAv7mnh54IUsRj43CPIVSKUzIfStk6McCIFcpO1LpTnYv5cBHvJ6F
+  V9XOhNjW6B2KtjtZ+P+VLlhJ
   -----END CERTIFICATE-----
