Upgrade to linkerd 2.10.2 (#41)
* remove old chart

* Squashed 'helm/linkerd2-app/' content from commit c40b175d

git-subtree-dir: helm/linkerd2-app
git-subtree-split: c40b175dce17dcebc67244f33ad064b07d19cc13

* Squashed 'helm/partials/' content from commit fa4fcadf

git-subtree-dir: helm/partials
git-subtree-split: fa4fcadfd698999f70496a68602397c6ee6ab822

* sync changes

* add schema and gitognore

* add abs config

* WIP - minor fixes

* make the chart build

* add kube-linter config file + remove yaml files from gitignore

* add dummy value for identityTrustAnchorsPEM

* align .Values.namespace to app name

* use retagged images + set default version

* fix identity.issuer.crtExpiry type in values schema

* Reword Readme a bit

* make the chart a clusterSingleton

* Add Note about  for linkerd CNI compatibility

* Remove cert-manager hooks for now

* remove cert-manager mentions in readme and template helpers

* Update README.md

* resolve

* Update README.md

* Update README.md

Co-authored-by: Gerald Pape <ubergesundheit@users.noreply.github.com>

* Align files

* try ci values to make conftest work

* disable gitleaks for ci values

* move gitleaks config file

* pimp readme

* add changelog entry

* update values schema + remove dummy value

* document linkerd viz extension

* better readability

* refactor README

* add missing stuff

* Apply suggestions from code review

Co-authored-by: Cedric Kaufmann <60580186+ced0ps@users.noreply.github.com>

* Update README.md

Co-authored-by: Cedric Kaufmann <60580186+ced0ps@users.noreply.github.com>

* mention brand new kubectl-gs flags

* Subtree 2.10 - rewritten and updated tests (#43)

* test skeleton

* working test

* Add missing files

* fix kind_config path

* test in ci

* use PodDisruptionBudget policy/v1beta1

* remove part of redundand code; update dependencies

* update dependpecies and code

* tests seem

--- a/helm/linkerd2-app/templates/config.yaml
+++ b/helm/linkerd2-app/templates/config.yaml
@@ -3,12 +3,12 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: linkerd-config
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
   labels:
-    {{.Values.global.controllerComponentLabel}}: controller
-    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+    linkerd.io/control-plane-component: controller
+    linkerd.io/control-plane-ns: {{.Values.namespace}}
   annotations:
-    {{.Values.global.createdByAnnotation}}: {{default (printf "linkerd/helm %s" .Values.global.linkerdVersion) .Values.global.cliVersion}}
+    {{ include "partials.annotations.created-by" . }}
 data:
   values: |
   {{- $values := deepCopy .Values }}
@@ -25,8 +25,8 @@ data:
   {{- if kindIs "map" $values.proxyInjector -}}
     {{- $_ := unset $values.proxyInjector "keyPEM"}}
   {{- end -}}
-  {{- if kindIs "map" $values.tap -}}
-    {{- $_ := unset $values.tap "keyPEM"}}
+  {{- if (empty $values.identityTrustDomain) -}}
+  {{- $_ := set $values "identityTrustDomain" $values.clusterDomain}}
   {{- end -}}
   {{- $_ := unset $values "partials"}}
   {{- $_ := unset $values "configs"}}
