--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,29 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@2.3.0
+  architect: giantswarm/architect@4.0.0
 
 workflows:
   package-and-push-chart-on-tag:
     jobs:
       - architect/push-to-app-catalog:
           name: "package and push linkerd2 chart"
-          app_catalog: "giantswarm-playground-catalog"
-          app_catalog_test: "giantswarm-playground-test-catalog"
+          context: architect
+          executor: "app-build-suite"
+          app_catalog: "giantswarm-catalog"
+          app_catalog_test: "giantswarm-test-catalog"
           chart: "linkerd2-app"
           # Trigger job on git tag.
           filters:
             tags:
               only: /^v.*/
+
+      - architect/run-tests-with-abs:
+          chart_dir: ./helm/linkerd2-app
+          name: execute chart tests
+          filters:
+            # Do not trigger the job on merge to master.
+            branches:
+              ignore:
+                - master
+          # requires:
+          #   - package and push linkerd2-app chart
