--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -1,12 +1,13 @@
-apiVersion: v1
-appVersion: stable-2.9.1
-description: Linkerd gives you observability, reliability, and security for your microservices
-  — with no code change required.
+apiVersion: "v1"
+appVersion: stable-2.10.2
+description: |
+  Linkerd gives you observability, reliability, and security
+  for your microservices — with no code change required.
 home: https://linkerd.io
 icon: https://s.giantswarm.io/app-icons/1/png/linkerd2-app-light.png
 keywords:
 - service-mesh
-kubeVersion: '>=1.13.0-0'
+kubeVersion: '>=1.16.0-0'
 maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
@@ -17,4 +18,7 @@ name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
 - https://github.com/giantswarm/linkerd2-app
-version: [[ .Version ]]
+version: 0.6.0
+restrictions:
+  clusterSingleton: true
+  fixedNamespace: linkerd
