--- a/helm/linkerd2-app/templates/namespace.yaml
+++ b/helm/linkerd2-app/templates/namespace.yaml
@@ -3,15 +3,14 @@
 ###
 ### Linkerd Namespace
 ###
----
 kind: Namespace
 apiVersion: v1
 metadata:
-  name: {{ .Release.Namespace }}
+  name: {{ .Values.namespace }}
   annotations:
-    {{.Values.global.proxyInjectAnnotation}}: {{.Values.global.proxyInjectDisabled}}
+    linkerd.io/inject: disabled
   labels:
-    {{.Values.global.linkerdNamespaceLabel}}: "true"
+    linkerd.io/is-control-plane: "true"
     config.linkerd.io/admission-webhooks: disabled
-    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+    linkerd.io/control-plane-ns: {{.Values.namespace}}
 {{ end -}}
