--- a/helm/linkerd2-app/templates/psp.yaml
+++ b/helm/linkerd2-app/templates/psp.yaml
@@ -2,17 +2,16 @@
 ###
 ### Control Plane PSP
 ###
----
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: linkerd-{{.Release.Namespace}}-control-plane
+  name: linkerd-{{.Values.namespace}}-control-plane
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+    linkerd.io/control-plane-ns: {{.Values.namespace}}
 spec:
   allowPrivilegeEscalation: false
   readOnlyRootFilesystem: true
-  {{- if empty .Values.global.cniEnabled }}
+  {{- if empty .Values.cniEnabled }}
   allowedCapabilities:
   - NET_ADMIN
   - NET_RAW
@@ -25,7 +24,7 @@ spec:
   seLinux:
     rule: RunAsAny
   runAsUser:
-    {{- if .Values.global.cniEnabled }}
+    {{- if .Values.cniEnabled }}
     rule: MustRunAsNonRoot
     {{- else }}
     rule: RunAsAny
@@ -33,7 +32,7 @@ spec:
   supplementalGroups:
     rule: MustRunAs
     ranges:
-    {{- if .Values.global.cniEnabled }}
+    {{- if .Values.cniEnabled }}
     - min: 10001
       max: 65535
     {{- else }}
@@ -43,7 +42,7 @@ spec:
   fsGroup:
     rule: MustRunAs
     ranges:
-    {{- if .Values.global.cniEnabled }}
+    {{- if .Values.cniEnabled }}
     - min: 10001
       max: 65535
     {{- else }}
@@ -62,71 +61,45 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: linkerd-psp
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+    linkerd.io/control-plane-ns: {{.Values.namespace}}
 rules:
 - apiGroups: ['policy', 'extensions']
   resources: ['podsecuritypolicies']
   verbs: ['use']
   resourceNames:
-  - linkerd-{{.Release.Namespace}}-control-plane
+  - linkerd-{{.Values.namespace}}-control-plane
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: linkerd-psp
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
   labels:
-    {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
+    linkerd.io/control-plane-ns: {{.Values.namespace}}
 roleRef:
   kind: Role
   name: linkerd-psp
   apiGroup: rbac.authorization.k8s.io
 subjects:
-{{ if .Values.tracing.enabled -}}
-- kind: ServiceAccount
-  name: linkerd-collector
-  namespace: {{.Release.Namespace}}
-{{ end -}}
 - kind: ServiceAccount
   name: linkerd-controller
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
 - kind: ServiceAccount
   name: linkerd-destination
-  namespace: {{.Release.Namespace}}
-{{ if .Values.global.grafana.enabled -}}
-- kind: ServiceAccount
-  name: linkerd-grafana
-  namespace: {{.Release.Namespace}}
-{{ end -}}
+  namespace: {{.Values.namespace}}
 {{ if not .Values.disableHeartBeat -}}
 - kind: ServiceAccount
   name: linkerd-heartbeat
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
 {{ end -}}
 - kind: ServiceAccount
   name: linkerd-identity
-  namespace: {{.Release.Namespace}}
-{{ if .Values.tracing.enabled -}}
-- kind: ServiceAccount
-  name: linkerd-jaeger
-  namespace: {{.Release.Namespace}}
-{{ end -}}
-{{ if .Values.prometheus.enabled -}}
-- kind: ServiceAccount
-  name: linkerd-prometheus
-  namespace: {{.Release.Namespace}}
-{{ end -}}
+  namespace: {{.Values.namespace}}
 - kind: ServiceAccount
   name: linkerd-proxy-injector
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
 - kind: ServiceAccount
   name: linkerd-sp-validator
-  namespace: {{.Release.Namespace}}
-- kind: ServiceAccount
-  name: linkerd-tap
-  namespace: {{.Release.Namespace}}
-- kind: ServiceAccount
-  name: linkerd-web
-  namespace: {{.Release.Namespace}}
+  namespace: {{.Values.namespace}}
