add proxy admin+control ports to the ignored ports list

--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -117,7 +117,7 @@ proxy:
 # proxy-init configuration
 proxyInit:
   # -- Default set of inbound ports to skip via itpables
-  ignoreInboundPorts: ""
+  ignoreInboundPorts: "4190,4191"
   # -- Default set of outbound ports to skip via itpables
   ignoreOutboundPorts: ""
   image:
