--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -20,5 +20,5 @@ version: 0.6.0
 restrictions:
   clusterSingleton: true
   fixedNamespace: linkerd
-annotatations:
+annotations:
   application.giantswarm.io/team: team-cabbage
