Update linkerd2-app chart metadata (#57)
* Update linkerd2-app chart metadata

* Fix typo

* Update CHANGELOG.md

--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -3,8 +3,8 @@ appVersion: stable-2.10.2
 description: |
   Linkerd gives you observability, reliability, and security
   for your microservices — with no code change required.
-home: https://linkerd.io
-icon: https://s.giantswarm.io/app-icons/1/png/linkerd2-app-light.png
+home: https://github.com/giantswarm/linkerd2-app
+icon: https://s.giantswarm.io/app-icons/linkerd2/1/light.svg
 keywords:
 - service-mesh
 kubeVersion: '>=1.16.0-0'
@@ -12,13 +12,13 @@ maintainers:
 - email: cncf-linkerd-dev@lists.cncf.io
   name: Linkerd authors
   url: https://linkerd.io/
-- name: Giant Swarm applications team
-  url: https://github.com/giantswarm/linkerd2-app
 name: linkerd2-app
 sources:
 - https://github.com/linkerd/linkerd2/
-- https://github.com/giantswarm/linkerd2-app
+- https://linkerd.io
 version: 0.6.0
 restrictions:
   clusterSingleton: true
   fixedNamespace: linkerd
+annotations:
+  application.giantswarm.io/team: team-cabbage
