--- a/.ats/main.yaml
+++ b/.ats/main.yaml
@@ -2,4 +2,4 @@ app-tests-skip-app-deploy: true
 
 smoke-tests-cluster-config-file: tests/kind_config.yaml
 smoke-tests-cluster-type: kind
-skip-steps: functional
+skip-steps: [functional, upgrade]
