pin ats version to 0.1.4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ workflows:
 
       - architect/run-tests-with-ats:
           name: execute chart tests
+          app-test-suite_container_tag: 0.1.4
+          app-test-suite_version: v0.1.4
           filters:
             # Do not trigger the job on merge to master.
             branches:
