--- a/tests/ats/Pipfile
+++ b/tests/ats/Pipfile
@@ -11,6 +11,7 @@ pykube-ng = ">=21.10.0"
 pyyaml = "~=5.4.1"
 pytest-rerunfailures = ">=10.2"
 requests = "~=2.25.1"
+Deprecated = ">=1.2"
 
 [requires]
 python_version = "3.9"
