--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@4.8.0
+  architect: giantswarm/architect@4.13.0
 
 workflows:
   package-and-push-chart-on-tag:
@@ -20,6 +20,7 @@ workflows:
 
       - architect/run-tests-with-ats:
           name: execute chart tests
+          app-test-suite_container_tag: "0.2.3-beta.1-50d0b68c62f0324ef11c45f515bca87ad09217c2"
           filters:
             # Do not trigger the job on merge to master.
             branches:
