--- a/tests/ats/Pipfile
+++ b/tests/ats/Pipfile
@@ -4,14 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-#pytest-helm-charts = ">=0.6.0"
-#pytest-helm-charts = {git = "https://github.com/giantswarm/pytest-helm-charts.git", editable = false, ref = "ensure-catalog-namespace"}
-pytest-helm-charts = {git = "https://github.com/giantswarm/pytest-helm-charts.git", editable = false, ref = "add-wait-for-namespace"}
+pytest-helm-charts = ">=0.7.0-beta.2"
 pytest = ">=6.2.5"
 pykube-ng = ">=21.10.0"
-pyyaml = "~=5.4.1"
+pyyaml = "~=6.0"
 pytest-rerunfailures = ">=10.2"
-requests = "~=2.25.1"
+requests = "~=2.27.1"
 
 [requires]
 python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
