--- a/tests/ats/Pipfile
+++ b/tests/ats/Pipfile
@@ -4,12 +4,15 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-pytest-helm-charts = ">=0.5.0"
-pytest = "~=6.2.4"
-pykube-ng = "~=21.3.0"
-pyyaml = "~=5.4.1"
-pytest-rerunfailures = "~=10.0"
-requests = "~=2.25.1"
+pytest-helm-charts = ">=0.7.0-beta.2"
+pytest = ">=6.2.5"
+pykube-ng = ">=21.10.0"
+pyyaml = "~=6.0"
+pytest-rerunfailures = ">=10.2"
+requests = "~=2.27.1"
 
 [requires]
-python_version = "3"
+python_version = "3.9"
+
+[pipenv]
+allow_prereleases = true
