changes for newer abs versions

--- a/.abs/main.yaml
+++ b/.abs/main.yaml
@@ -3,3 +3,5 @@ replace-chart-version-with-git: true
 replace-app-version-with-git: false
 generate-metadata: true
 catalog-base-url: https://giantswarm.github.io/giantswarm-catalog/
+# until we support custom template helper filenames
+disable-giantswarm-helm-validator: true
