--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -3,7 +3,15 @@
 # Declare variables to be passed into your templates.
 
 # -- Kubernetes DNS Domain name to use
-clusterDomain: cluster.local
+clusterDomain: &cluster_domain cluster.local
+
+controllerResources: &controller_resources
+  cpu: &controller_resources_cpu
+    limit: ""
+    request: 100m
+  memory:
+    limit: 250Mi
+    request: 50Mi
 
 # -- The cluster networks for which service discovery is performed. This should
 # include the pod network but need not include the node network.
@@ -22,7 +30,7 @@ controlPlaneTracing: false
 # -- namespace to send control plane traces to
 controlPlaneTracingNamespace: linkerd-jaeger
 # -- control plane version. See Proxy section for proxy version
-linkerdVersion: linkerdVersionValue
+linkerdVersion: stable-2.10.2
 # -- Control plane namespace
 namespace: linkerd
 # -- enables the use of EndpointSlice informers for the destination service;
@@ -32,12 +40,12 @@ enableEndpointSlices: false
 # -- enabling this omits the NET_ADMIN capability in the PSP
 # and the proxy-init container when injecting the proxy;
 # requires the linkerd-cni plugin to already be installed
-cniEnabled: false
+cniEnabled: true
 # -- Trust root certificate (ECDSA). It must be provided during install.
 identityTrustAnchorsPEM: |
 # -- Trust domain used for identity
 # @default -- clusterDomain
-identityTrustDomain: ""
+identityTrustDomain: *cluster_domain
 # -- Additional annotations to add to all pods
 podAnnotations: {}
 # -- Additional labels to add to all pods
@@ -54,7 +62,7 @@ proxy:
   inboundConnectTimeout: 100ms
   image:
     # -- Docker image for the proxy
-    name: cr.l5d.io/linkerd/proxy
+    name: quay.io/giantswarm/linkerd2-proxy
     # -- Pull policy for the proxy container Docker image
     # @default -- imagePullPolicy
     pullPolicy: ""
@@ -83,12 +91,12 @@ proxy:
       # -- Maximum amount of CPU units that the proxy can use
       limit: ""
       # -- Amount of CPU units that the proxy requests
-      request: ""
+      request: "100m"
     memory:
       # -- Maximum amount of memory that the proxy can use
-      limit: ""
+      limit: "250Mi"
       # -- Maximum amount of memory that the proxy requests
-      request: ""
+      request: "20Mi"
   # -- User id under which the proxy runs
   uid: 2102
   # -- If set the proxy sidecar will stay alive for at
@@ -109,12 +117,12 @@ proxy:
 # proxy-init configuration
 proxyInit:
   # -- Default set of inbound ports to skip via itpables
-  ignoreInboundPorts: ""
+  ignoreInboundPorts: "4190,4191"
   # -- Default set of outbound ports to skip via itpables
   ignoreOutboundPorts: ""
   image:
     # -- Docker image for the proxy-init container
-    name: cr.l5d.io/linkerd/proxy-init
+    name: quay.io/giantswarm/linkerd2-proxy-init
     # -- Pull policy for the proxy-init container Docker image
     # @default -- imagePullPolicy
     pullPolicy: ""
@@ -146,14 +154,14 @@ enableH2Upgrade: true
 # -- Omit the `sideEffects` flag in the webhook manifests
 omitWebhookSideEffects: false
 # -- Failure policy for the proxy injector
-webhookFailurePolicy: Ignore
+webhookFailurePolicy: Fail
 
 
 # controllerImage -- Docker image for the controller and identity
 # components
-controllerImage: cr.l5d.io/linkerd/controller
+controllerImage: quay.io/giantswarm/linkerd2-controller
 # -- Number of replicas for each control plane pod
-controllerReplicas: 1
+controllerReplicas: 3
 # -- User ID for the control plane components
 controllerUID: 2103
 
@@ -162,16 +170,16 @@ controllerUID: 2103
 # set resources for the sp-validator and its linkerd proxy respectively
 # see proxy.resources for details.
 # destinationResources -- CPU and Memory resources required by destination (see `proxy.resources` for sub-fields)
-#destinationResources:
-#destinationProxyResources -- CPU and Memory resources required by proxy
+destinationResources: *controller_resources
+# destinationProxyResources -- CPU and Memory resources required by proxy
 # injected into destination pod (see `proxy.resources` for sub-fields)
-#destinationProxyResources:
+# destinationProxyResources:
 
 # debug configuration
 debugContainer:
   image:
     # -- Docker image for the debug container
-    name: cr.l5d.io/linkerd/debug
+    name: quay.io/giantswarm/linkerd2-debug
     # -- Pull policy for the debug container Docker image
     # @default -- imagePullPolicy
     pullPolicy: ""
@@ -187,7 +195,7 @@ identity:
     clockSkewAllowance: 20s
 
     # -- Expiration timestamp for the issuer certificate. It must be provided during install. Must match the expiry date in crtPEM
-    crtExpiry:
+    crtExpiry: ""
 
     # -- Amount of time for which the Identity issuer should certify identity
     issuanceLifetime: 24h0m0s
@@ -203,9 +211,13 @@ identity:
 
 
 # -|- CPU and Memory resources required by the identity controller (see `proxy.resources` for sub-fields)
-#identityResources:
+identityResources:
+  cpu: *controller_resources_cpu
+  memory:
+    limit: 250Mi
+    request: 10Mi
 # -|- CPU and Memory resources required by proxy injected into identity pod (see `proxy.resources` for sub-fields)
-#identityProxyResources:
+# identityProxyResources:
 
 # heartbeat configuration
 # disableHeartBeat -- Set to true to not start the heartbeat cronjob
@@ -238,11 +250,11 @@ proxyInjector:
   caBundle: |
 
 # -|- CPU and Memory resources required by the proxy injector (see
-#`proxy.resources` for sub-fields)
-#proxyInjectorResources:
-#-|- CPU and Memory resources required by proxy injected into the proxy injector
-#pod (see `proxy.resources` for sub-fields)
-#proxyInjectorProxyResources:
+# `proxy.resources` for sub-fields)
+proxyInjectorResources: *controller_resources
+# -|- CPU and Memory resources required by proxy injected into the proxy injector
+# pod (see `proxy.resources` for sub-fields)
+# proxyInjectorProxyResources:
 
 # service profile validator configuration
 profileValidator:
@@ -271,20 +283,20 @@ profileValidator:
   # as no certificate will be generated.
   caBundle: |
 
-# -|- CPU and Memory resources required by the SP validator (see
-#`proxy.resources` for sub-fields)
-#spValidatorResources:
-# -|- CPU and Memory resources required by proxy injected into the SP validator
-#pod (see `proxy.resources` for sub-fields)
-#spValidatorProxyResources:
+#  -|- CPU and Memory resources required by the SP validator (see
+# `proxy.resources` for sub-fields)
+spValidatorResources: *controller_resources
+#  -|- CPU and Memory resources required by proxy injected into the SP validator
+# pod (see `proxy.resources` for sub-fields)
+# spValidatorProxyResources:
 
 # -|- CPU and Memory resources required by controllers publicAPI (see
-#`proxy.resources` for sub-fields)
-#publicAPIResources:
-#-|- CPU and Memory resources required by proxy injected into controllers public
-#API pod (see `proxy.resources` for sub-fields) values
-#`proxy.resources`
-#publicAPIProxyResources:
+# `proxy.resources` for sub-fields)
+publicAPIResources: *controller_resources
+# -|- CPU and Memory resources required by proxy injected into controllers public
+# API pod (see `proxy.resources` for sub-fields) values
+# `proxy.resources`
+# publicAPIProxyResources:
 
 # If the namespace is controlled by an external tool or can't be installed with Helm
 # you can disable its installation. In this case:
@@ -294,7 +306,7 @@ profileValidator:
 
 # installNamespace -- Set to false when installing Linkerd in a custom namespace. See the
 # [Linkerd documentation](https://linkerd.io/2/tasks/install-helmcustomizing-the-namespace) for more information.
-installNamespace: true
+installNamespace: false
 
 # -- NodeSelector section, See the [K8S
 # documentation](https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector)
@@ -305,4 +317,6 @@ nodeSelector:
 # -|- Tolerations section, See the
 # [K8S documentation](https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/)
 # for more information
-#tolerations:
+# tolerations:
+
+enablePodAntiAffinity: true
