Squashed 'helm/linkerd2-app/' changes from c40b175d..63b95fc9
63b95fc9 proxy-init: Run as root by default (#8300)
83fc9753 Revert "Fix HA race when installing through Helm (#7718)"
896335c8 allow pprof to be configurable via helm flags (#8090)
cdea8f66 Fix HA race when installing through Helm (#7718)
841644ea Stop using deprecated `beta.kubernetes.io/node` label (#7310)
8bbf1ed7 Bump linkerd2-proxy-init to v1.5.3 (#7899)
398699ee Introduce annotation to skip subnets (#7631)
7fcd317d Allow overriding runAsNonRoot behaviour for proxyInit (#7348)
1a51f17b Adds logFormat and logLevel values for proxy-init (#6881) (#6966)
18ed6608 Update `proxy-init` to `v1.5.2` (#7447)
55ba462f proxy-init: v1.5.1 (#7223)
7298e393 Bump proxy-init to v1.4.1 (#7010)
c4ab2986 Clearly mark the MSKV as 1.17.0
2770ff57 Revert minimum k8s version changes
40f63bd2 policy: Add end-to-end ServerAuthorization tests (#8155)
570af0d7 policy: Validate ServerAuthorization resources (#8076)
355581a8 policy: Use a `kubert::Runtime` (#7961)
26ada648 Allow `Server` CRD to have empty `PodSelector` (#7925)
f874410f Add control plane namespace arg to policy controller (#7206)
f7091e24 Update minimum-supported K8s version to v1.20 (#7172)
7b631117 Use the 'all-unauthenticated' policy with the identity controller (#7110)
8e896e3d skip prometheus scrapes on policy's `admin` (#7088)
4ee86a58 Update kubeVersion to >=1.17.0 in helm chart (#7077)
847005e3 feat: remove cert expiry date in helm charts (#7056)
e8e5e9c0 Update policy CRD version to v1beta1 (#6943)
61663e08 Fix policy validator namespaceSelector (#6932)
49b8011c Trigger destination restart upon every upgrade (#6954)
ebcab644 Remove `omitWebhookSideEffects` flag/setting (#6942)
e3b5c894 policy: Do not attempt to validate ServerAuthorizations (#6936)
becf6182 drop svc `linkerd-sp-validator` opaque ports annotation (#6903)
7ef808c6 Enable TLS detection on port 443 (#6887)
8ba8c35b policy: Support JSON log formatting (#6888)
f72fedfa Add default policy annot

--- a/templates/psp.yaml
+++ b/templates/psp.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.enablePSP -}}
 ---
 ###
 ### Control Plane PSP
@@ -84,9 +85,6 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 subjects:
 - kind: ServiceAccount
-  name: linkerd-controller
-  namespace: {{.Values.namespace}}
-- kind: ServiceAccount
   name: linkerd-destination
   namespace: {{.Values.namespace}}
 {{ if not .Values.disableHeartBeat -}}
@@ -103,3 +101,4 @@ subjects:
 - kind: ServiceAccount
   name: linkerd-sp-validator
   namespace: {{.Values.namespace}}
+{{ end -}}
