--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@
 clusterDomain: cluster.local
 
 # -- The cluster networks for which service discovery is performed. This should
-# include the pod network but need not include the node network.
+# include the pod and service networks, but need not include the node network.
 #
 # By default, all private networks are specified so that resolution works in
 # typical Kubernetes environments.
@@ -29,6 +29,9 @@ namespace: linkerd
 # enableEndpointSlices should be set to true only if EndpointSlice K8s feature
 # gate is on; the feature is still experimental.
 enableEndpointSlices: false
+# -- enables the use of pprof endpoints on control plane component's admin
+# servers
+enablePprof: false
 # -- enabling this omits the NET_ADMIN capability in the PSP
 # and the proxy-init container when injecting the proxy;
 # requires the linkerd-cni plugin to already be installed
@@ -42,6 +45,42 @@ identityTrustDomain: ""
 podAnnotations: {}
 # -- Additional labels to add to all pods
 podLabels: {}
+
+# policy controller configuration
+policyController:
+  # image -- Docker image for the policy controller
+  image:
+    # -- Docker image for the proxy
+    name: cr.l5d.io/linkerd/policy-controller
+    # -- Pull policy for the proxy container Docker image
+    # @default -- imagePullPolicy
+    pullPolicy: ""
+    # -- Tag for the proxy container Docker image
+    # @default -- linkerdVersion
+    version: ""
+
+  # -- The default allow policy to use when no `Server` selects a pod.  One of: "all-authenticated",
+  # "all-unauthenticated", "cluster-authenticated", "cluster-unauthenticated", "deny"
+  # @default -- "all-unauthenticated"
+  defaultAllowPolicy: "all-unauthenticated"
+
+  # -- Log level for the policy controller
+  logLevel: linkerd=info,warn
+
+  # -- policy controller resource requests & limits
+  # @default -- destinationResources
+  resources:
+    cpu:
+      # -- Maximum amount of CPU units that the policy controller can use
+      limit: ""
+      # -- Amount of CPU units that the policy controller requests
+      request: ""
+    memory:
+      # -- Maximum amount of memory that the policy controller can use
+      limit: ""
+      # -- Maximum amount of memory that the policy controller requests
+      request: ""
+
 # proxy configuration
 proxy:
   # -- Enable service profiles for non-Kubernetes services
@@ -97,21 +136,36 @@ proxy:
   # hooks](https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/#container-hooks)
   # for more info on container lifecycle hooks.
   waitBeforeExitSeconds: 0
+  #  -- If set, the application container will not start until the proxy is
+  # ready
+  await: true
   requireIdentityOnInboundPorts: ""
   # -- Default set of opaque ports
   # - SMTP (25,587) server-first
-  # - HTTPS (443) opaque TLS
   # - MYSQL (3306) server-first
+  # - Galera (4444) server-first
   # - PostgreSQL (5432) server-first
+  # - Redis (6379) server-first
+  # - ElasticSearch (9300) server-first
   # - Memcached (11211) clients do not issue any preamble, which breaks detection
-  opaquePorts: "25,443,587,3306,5432,11211"
+  opaquePorts: "25,587,3306,4444,5432,6379,9300,11211"
 
 # proxy-init configuration
 proxyInit:
-  # -- Default set of inbound ports to skip via itpables
-  ignoreInboundPorts: ""
-  # -- Default set of outbound ports to skip via itpables
-  ignoreOutboundPorts: ""
+  # -- Default set of inbound ports to skip via iptables
+  # - Galera (4567,4568)
+  ignoreInboundPorts: "4567,4568"
+  # -- Default set of outbound ports to skip via iptables
+  # - Galera (4567,4568)
+  ignoreOutboundPorts: "4567,4568"
+  # -- Comma-separated list of subnets in valid CIDR format that should be skipped by the proxy
+  skipSubnets: ""
+  # -- Log level for the proxy-init
+  # @default -- info
+  logLevel: ""
+  # -- Log format (`plain` or `json`) for the proxy-init
+  # @default -- plain
+  logFormat: ""
   image:
     # -- Docker image for the proxy-init container
     name: cr.l5d.io/linkerd/proxy-init
@@ -119,7 +173,7 @@ proxyInit:
     # @default -- imagePullPolicy
     pullPolicy: ""
     # -- Tag for the proxy-init container Docker image
-    version: v1.3.11
+    version: v1.5.3
   resources:
     cpu:
       # -- Maximum amount of CPU units that the proxy-init container can use
@@ -132,9 +186,12 @@ proxyInit:
       # -- Amount of memory that the proxy-init container requests
       request: 10Mi
   closeWaitTimeoutSecs: 0
+  # -- Allow overriding the runAsNonRoot behaviour
+  runAsRoot: true
   xtMountPath:
     mountPath: /run
     name: linkerd-proxy-init-xtables-lock
+
 # -- For Private docker registries, authentication is needed.
 #  Registry secrets are applied to the respective service accounts
 imagePullSecrets: []
@@ -143,20 +200,19 @@ imagePullSecrets: []
 # -- Allow proxies to perform transparent HTTP/2 upgrading
 enableH2Upgrade: true
 
-# -- Omit the `sideEffects` flag in the webhook manifests
-omitWebhookSideEffects: false
+# -- Add a PSP resource and bind it to the control plane ServiceAccounts. Note
+# PSP has been deprecated since k8s v1.21
+enablePSP: false
+
 # -- Failure policy for the proxy injector
 webhookFailurePolicy: Ignore
 
-
-# controllerImage -- Docker image for the controller and identity
-# components
+# controllerImage -- Docker image for the destination and identity components
 controllerImage: cr.l5d.io/linkerd/controller
 # -- Number of replicas for each control plane pod
 controllerReplicas: 1
 # -- User ID for the control plane components
 controllerUID: 2103
-
 
 # destination configuration
 # set resources for the sp-validator and its linkerd proxy respectively
@@ -180,14 +236,13 @@ debugContainer:
     version: ""
 
 identity:
+  # -- If the linkerd-identity-trust-roots ConfigMap has already been created
+  externalCA: false
   issuer:
     scheme: linkerd.io/tls
 
     # -- Amount of time to allow for clock skew within a Linkerd cluster
     clockSkewAllowance: 20s
-
-    # -- Expiration timestamp for the issuer certificate. It must be provided during install. Must match the expiry date in crtPEM
-    crtExpiry:
 
     # -- Amount of time for which the Identity issuer should certify identity
     issuanceLifetime: 24h0m0s
@@ -271,20 +326,36 @@ profileValidator:
   # as no certificate will be generated.
   caBundle: |
 
+# policy validator configuration
+policyValidator:
+  # -- Do not create a secret resource for the policyValidator webhook. If this is set to `true`, the value `policyValidator.caBundle` must be set (see below).
+  externalSecret: false
+
+  # -- Namespace selector used by admission webhook
+  namespaceSelector:
+    matchExpressions:
+    - key: config.linkerd.io/admission-webhooks
+      operator: NotIn
+      values:
+      - disabled
+
+  # -- Certificate for the policy validator. If not provided then Helm
+  # will generate one.
+  crtPEM: |
+
+  # -- Certificate key for the policy validator. If not provided then
+  # Helm will generate one.
+  keyPEM: |
+
+  # -- Bundle of CA certificates for policy validator. If not provided
+  # then Helm will use the certificate generated  for `policyValidator.crtPEM`.
+  # If `policyValidator.externalSecret` is set to true, this value must be set,
+  # as no certificate will be generated.
+  caBundle: |
+
 # -|- CPU and Memory resources required by the SP validator (see
 #`proxy.resources` for sub-fields)
 #spValidatorResources:
-# -|- CPU and Memory resources required by proxy injected into the SP validator
-#pod (see `proxy.resources` for sub-fields)
-#spValidatorProxyResources:
-
-# -|- CPU and Memory resources required by controllers publicAPI (see
-#`proxy.resources` for sub-fields)
-#publicAPIResources:
-#-|- CPU and Memory resources required by proxy injected into controllers public
-#API pod (see `proxy.resources` for sub-fields) values
-#`proxy.resources`
-#publicAPIProxyResources:
 
 # If the namespace is controlled by an external tool or can't be installed with Helm
 # you can disable its installation. In this case:
@@ -293,14 +364,14 @@ profileValidator:
 #     config.linkerd.io/admission-webhooks: disabled
 
 # installNamespace -- Set to false when installing Linkerd in a custom namespace. See the
-# [Linkerd documentation](https://linkerd.io/2/tasks/install-helmcustomizing-the-namespace) for more information.
+# [Linkerd documentation](https://linkerd.io/2/tasks/install-helm#customizing-the-namespace) for more information.
 installNamespace: true
 
 # -- NodeSelector section, See the [K8S
 # documentation](https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector)
 # for more information
 nodeSelector:
-  beta.kubernetes.io/os: linux
+  kubernetes.io/os: linux
 
 # -|- Tolerations section, See the
 # [K8S documentation](https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/)
