Revert "enable upgrade test"
This reverts commit cc91d7292f0e61ad6f7a3b8a60fcc10df2f5a2ee.

--- a/.ats/main.yaml
+++ b/.ats/main.yaml
@@ -2,8 +2,4 @@ app-tests-skip-app-deploy: true
 
 smoke-tests-cluster-config-file: tests/kind_config.yaml
 smoke-tests-cluster-type: kind
-skip-steps: [functional]
-
-upgrade-tests-cluster-type: kind
-upgrade-tests-cluster-config-file: tests/kind_config.yaml
-upgrade-tests-app-catalog-url: https://giantswarm.github.io/giantswarm-catalog
+skip-steps: [functional, upgrade]
