--- a/helm/linkerd2-app/templates/proxy-injector.yaml
+++ b/helm/linkerd2-app/templates/proxy-injector.yaml
@@ -112,7 +112,7 @@ spec:
       {{ if not .Values.cniEnabled -}}
       initContainers:
       - {{- include "partials.proxy-init" $tree | indent 8 | trimPrefix (repeat 7 " ") }}
-      {{- if .Values.postHookInitHack -}}
+      {{- if .Values.postHookInitHack.enabled -}}
       - {{- include "post-hook-init-hack.container" . }}
       {{- end }}
       {{- else if .Values.postHookInitHack }}
