deployment/proxy-injector: Fix postHookInitHack check.

--- a/helm/linkerd2-app/templates/proxy-injector.yaml
+++ b/helm/linkerd2-app/templates/proxy-injector.yaml
@@ -115,7 +115,7 @@ spec:
       {{- if .Values.postHookInitHack.enabled -}}
       - {{- include "post-hook-init-hack.container" . }}
       {{- end }}
-      {{- else if .Values.postHookInitHack }}
+      {{- else if .Values.postHookInitHack.enabled }}
       initContainers:
       - {{- include "post-hook-init-hack.container" . | indent 8 | trimPrefix (repeat 7 " ") }}
       {{- end }}
