specify not to overwrite registry switch

--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -13,7 +13,8 @@ controllerResources: &controller_resources
     limit: 250Mi
     request: 50Mi
 
-# Registry switch
+# -- Registry switch
+# Do not overwrite this as it is automatically set based on the installation region
 image:
   registry: quay.io
 
